--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
-<body>
- <h1>METS Github Landing Page</h1>
-</body>
+	<head>
+		<title>METS Github Landing Page</title> 
+	</head>
+	<body>
+		<h1>METS Github Landing Page</h1>
+		<h2>Documentation</h2>
+		<ul>
+			<li><a href="METS_Docs/mets.html">METS Schema 1.12 Documentation</a></li>
+		</ul>
+	</body>
 </html>
