Trying different output options

--- a/METS_Docs/mets.html
+++ b/METS_Docs/mets.html
@@ -3951,7 +3951,7 @@ var modelBoxes= new Array('model_mets',
                            <div class="floatRight"><input id="button_diagram_mdSecType_mdSecType_mdWrap_binData" type="image" src="img/btM.gif" value="-" onclick="switchState('diagram_mdSecType_mdSecType_mdWrap_binData');" class="control" /></div>
                         </td>
                         <td class="diagram">
-                           <div id="diagram_mdSecType_mdSecType_mdWrap_binData" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_binData_1.jpeg" /></div>
+                           <div id="diagram_mdSecType_mdSecType_mdWrap_binData" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_binData.jpeg" /></div>
                         </td>
                      </tr>
                      <tr>
@@ -4028,7 +4028,7 @@ var modelBoxes= new Array('model_mets',
                            <div class="floatRight"><input id="button_diagram_mdSecType_mdSecType_mdWrap_xmlData" type="image" src="img/btM.gif" value="-" onclick="switchState('diagram_mdSecType_mdSecType_mdWrap_xmlData');" class="control" /></div>
                         </td>
                         <td class="diagram">
-                           <div id="diagram_mdSecType_mdSecType_mdWrap_xmlData" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_xmlData.jpeg" /></div>
+                           <div id="diagram_mdSecType_mdSecType_mdWrap_xmlData" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_xmlData_1.jpeg" /></div>
                         </td>
                      </tr>
                      <tr>
@@ -6426,7 +6426,7 @@ var modelBoxes= new Array('model_mets',
                            <div class="floatRight"><input id="button_diagram_fileType_fileType_FContent_binData" type="image" src="img/btM.gif" value="-" onclick="switchState('diagram_fileType_fileType_FContent_binData');" class="control" /></div>
                         </td>
                         <td class="diagram">
-                           <div id="diagram_fileType_fileType_FContent_binData" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_binData.jpeg" /></div>
+                           <div id="diagram_fileType_fileType_FContent_binData" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_binData_1.jpeg" /></div>
                         </td>
                      </tr>
                      <tr>
@@ -6503,7 +6503,7 @@ var modelBoxes= new Array('model_mets',
                            <div class="floatRight"><input id="button_diagram_fileType_fileType_FContent_xmlData" type="image" src="img/btM.gif" value="-" onclick="switchState('diagram_fileType_fileType_FContent_xmlData');" class="control" /></div>
                         </td>
                         <td class="diagram">
-                           <div id="diagram_fileType_fileType_FContent_xmlData" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_xmlData_1.jpeg" /></div>
+                           <div id="diagram_fileType_fileType_FContent_xmlData" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_xmlData.jpeg" /></div>
                         </td>
                      </tr>
                      <tr>
@@ -7527,7 +7527,7 @@ var modelBoxes= new Array('model_mets',
                            <div class="floatRight"><input id="button_diagram_structMapType_div" type="image" src="img/btM.gif" value="-" onclick="switchState('diagram_structMapType_div');" class="control" /></div>
                         </td>
                         <td class="diagram">
-                           <div id="diagram_structMapType_div" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_div.jpeg" usemap="#mets_xsd_Element_div" /><map name="mets_xsd_Element_div" id="mets_xsd_Element_div">
+                           <div id="diagram_structMapType_div" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_div_1.jpeg" usemap="#mets_xsd_Element_div_1" /><map name="mets_xsd_Element_div_1" id="mets_xsd_Element_div_1">
                                  <area alt="mets.tmp#divType_ID" href="mets.html#divType_ID" coords="177,79,270,123" />
                                  <area alt="mets.tmp#ORDERLABELS" href="mets.html#ORDERLABELS" coords="180,195,310,221" />
                                  <area alt="mets.tmp#divType_DMDID" href="mets.html#divType_DMDID" coords="177,236,296,280" />
@@ -8370,7 +8370,7 @@ var modelBoxes= new Array('model_mets',
                            <div class="floatRight"><input id="button_diagram_parType_area" type="image" src="img/btM.gif" value="-" onclick="switchState('diagram_parType_area');" class="control" /></div>
                         </td>
                         <td class="diagram">
-                           <div id="diagram_parType_area" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_area_1.jpeg" usemap="#mets_xsd_Element_area_1" /><map name="mets_xsd_Element_area_1" id="mets_xsd_Element_area_1">
+                           <div id="diagram_parType_area" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_area.jpeg" usemap="#mets_xsd_Element_area" /><map name="mets_xsd_Element_area" id="mets_xsd_Element_area">
                                  <area alt="mets.tmp#areaType_ID" href="mets.html#areaType_ID" coords="165,79,258,123" />
                                  <area alt="mets.tmp#areaType_FILEID" href="mets.html#areaType_FILEID" coords="165,192,277,236" />
                                  <area alt="mets.tmp#areaType_SHAPE" href="mets.html#areaType_SHAPE" coords="165,305,347,349" />
@@ -8869,7 +8869,7 @@ var modelBoxes= new Array('model_mets',
                            <div class="floatRight"><input id="button_diagram_seqType_area" type="image" src="img/btM.gif" value="-" onclick="switchState('diagram_seqType_area');" class="control" /></div>
                         </td>
                         <td class="diagram">
-                           <div id="diagram_seqType_area" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_area_2.jpeg" usemap="#mets_xsd_Element_area_2" /><map name="mets_xsd_Element_area_2" id="mets_xsd_Element_area_2">
+                           <div id="diagram_seqType_area" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_area_1.jpeg" usemap="#mets_xsd_Element_area_1" /><map name="mets_xsd_Element_area_1" id="mets_xsd_Element_area_1">
                                  <area alt="mets.tmp#areaType_ID" href="mets.html#areaType_ID" coords="165,79,258,123" />
                                  <area alt="mets.tmp#areaType_FILEID" href="mets.html#areaType_FILEID" coords="165,192,277,236" />
                                  <area alt="mets.tmp#areaType_SHAPE" href="mets.html#areaType_SHAPE" coords="165,305,347,349" />
@@ -9578,7 +9578,7 @@ var modelBoxes= new Array('model_mets',
                            <div class="floatRight"><input id="button_diagram_divType_divType_fptr_area" type="image" src="img/btM.gif" value="-" onclick="switchState('diagram_divType_divType_fptr_area');" class="control" /></div>
                         </td>
                         <td class="diagram">
-                           <div id="diagram_divType_divType_fptr_area" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_area.jpeg" usemap="#mets_xsd_Element_area" /><map name="mets_xsd_Element_area" id="mets_xsd_Element_area">
+                           <div id="diagram_divType_divType_fptr_area" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_area_2.jpeg" usemap="#mets_xsd_Element_area_2" /><map name="mets_xsd_Element_area_2" id="mets_xsd_Element_area_2">
                                  <area alt="mets.tmp#areaType_ID" href="mets.html#areaType_ID" coords="185,79,278,123" />
                                  <area alt="mets.tmp#areaType_FILEID" href="mets.html#areaType_FILEID" coords="185,192,297,236" />
                                  <area alt="mets.tmp#areaType_SHAPE" href="mets.html#areaType_SHAPE" coords="185,305,367,349" />
@@ -9901,7 +9901,7 @@ var modelBoxes= new Array('model_mets',
                            <div class="floatRight"><input id="button_diagram_divType_div" type="image" src="img/btM.gif" value="-" onclick="switchState('diagram_divType_div');" class="control" /></div>
                         </td>
                         <td class="diagram">
-                           <div id="diagram_divType_div" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_div_1.jpeg" usemap="#mets_xsd_Element_div_1" /><map name="mets_xsd_Element_div_1" id="mets_xsd_Element_div_1">
+                           <div id="diagram_divType_div" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_div.jpeg" usemap="#mets_xsd_Element_div" /><map name="mets_xsd_Element_div" id="mets_xsd_Element_div">
                                  <area alt="mets.tmp#divType_ID" href="mets.html#divType_ID" coords="157,79,250,123" />
                                  <area alt="mets.tmp#ORDERLABELS" href="mets.html#ORDERLABELS" coords="160,195,290,221" />
                                  <area alt="mets.tmp#divType_DMDID" href="mets.html#divType_DMDID" coords="157,236,276,280" />
@@ -11013,7 +11013,7 @@ var modelBoxes= new Array('model_mets',
                            <div class="floatRight"><input id="button_diagram_metsType_behaviorSec" type="image" src="img/btM.gif" value="-" onclick="switchState('diagram_metsType_behaviorSec');" class="control" /></div>
                         </td>
                         <td class="diagram">
-                           <div id="diagram_metsType_behaviorSec" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_behaviorSec.jpeg" usemap="#mets_xsd_Element_behaviorSec" /><map name="mets_xsd_Element_behaviorSec" id="mets_xsd_Element_behaviorSec">
+                           <div id="diagram_metsType_behaviorSec" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_behaviorSec_1.jpeg" usemap="#mets_xsd_Element_behaviorSec_1" /><map name="mets_xsd_Element_behaviorSec_1" id="mets_xsd_Element_behaviorSec_1">
                                  <area alt="mets.tmp#behaviorSecType_ID" href="mets.html#behaviorSecType_ID" coords="224,79,317,123" />
                                  <area alt="mets.tmp#behaviorSecType_CREATED" href="mets.html#behaviorSecType_CREATED" coords="224,192,351,236" />
                                  <area alt="mets.tmp#behaviorSecType_LABEL" href="mets.html#behaviorSecType_LABEL" coords="224,291,335,335" />
@@ -11180,7 +11180,7 @@ var modelBoxes= new Array('model_mets',
                            <div class="floatRight"><input id="button_diagram_behaviorSecType_behaviorSec" type="image" src="img/btM.gif" value="-" onclick="switchState('diagram_behaviorSecType_behaviorSec');" class="control" /></div>
                         </td>
                         <td class="diagram">
-                           <div id="diagram_behaviorSecType_behaviorSec" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_behaviorSec_1.jpeg" usemap="#mets_xsd_Element_behaviorSec_1" /><map name="mets_xsd_Element_behaviorSec_1" id="mets_xsd_Element_behaviorSec_1">
+                           <div id="diagram_behaviorSecType_behaviorSec" style="display:block"><img alt="Diagram" border="0" src="img/mets_xsd_Element_behaviorSec.jpeg" usemap="#mets_xsd_Element_behaviorSec" /><map name="mets_xsd_Element_behaviorSec" id="mets_xsd_Element_behaviorSec">
                                  <area alt="mets.tmp#behaviorSecType_ID" href="mets.html#behaviorSecType_ID" coords="204,79,297,123" />
                                  <area alt="mets.tmp#behaviorSecType_CREATED" href="mets.html#behaviorSecType_CREATED" coords="204,192,331,236" />
                                  <area alt="mets.tmp#behaviorSecType_LABEL" href="mets.html#behaviorSecType_LABEL" coords="204,291,315,335" />
