iPRES 2023 tutorial material

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 			<li><a href="METS_Docs/mets.html">METS Schema 1.12.1 Documentation</a></li>
 			<li><a href="METS_v2_Docs/mets.html">METS Schema 2.0 Beta Documentation</a></li>
 		</ul>
+
+    <h2>Workshop/Tutorial - iPRES 2023</h2>
+    <ul>
+      <li><a href="METS Tutorial iPRES 2023.pptx">METS Tutorial - iPRES 2023 - Powerpoint</a></li>
+      <li><a href="METS Tutorial iPRES 2023.pdf">METS Tutorial - iPRES 2023 - Powerpoint - PDF</a></li>
+      <li><a href="METS Exercise iPRES 2023.docx">METS Tutorial - iPRES 2023 - Exercise - Word</a></li>
+      <li><a href="METS Exercise iPRES 2023.pdf">METS Tutorial - iPRES 2023 - Exercise - PDF</a></li>
 	</body>
 </html>
