Fix some typos (found by codespell)
Signed-off-by: Stefan Weil <sw@weilnetz.de>

--- a/METS_v1_Docs/mets_xsd_Complex_Type_mdSecType.html
+++ b/METS_v1_Docs/mets_xsd_Complex_Type_mdSecType.html
@@ -195,8 +195,8 @@ var modelBoxes= new Array('model_mdSecType_mdWrap',
         
         /**
          * Update the message presented in the title of the html page.
-         * - If the documentation was splited by namespace we present something like: "Documentation for namespace 'ns'"
-         * - If the documentation was splited by location we present somehing like: "Documentation for 'Schema.xsd'"
+         * - If the documentation was split by namespace we present something like: "Documentation for namespace 'ns'"
+         * - If the documentation was split by location we present something like: "Documentation for 'Schema.xsd'"
          * - If no split we always present: "Documentation for 'MainSchema.xsd'"
          */
         function updatePageTitle(message) {
@@ -562,7 +562,7 @@ var modelBoxes= new Array('model_mdSecType_mdWrap',
 </span><span class="tT">FGDC: Federal Geographic Data Committee metadata</span><span class="tI">
 </span><span class="tT">LOM: Learning Object Model</span><span class="tI">
 </span><span class="tT">PREMIS:  PREservation Metadata: Implementation Strategies</span><span class="tI">
-</span><span class="tT">PREMIS:OBJECT: PREMIS Object entiry</span><span class="tI">
+</span><span class="tT">PREMIS:OBJECT: PREMIS Object entity</span><span class="tI">
 </span><span class="tT">PREMIS:AGENT: PREMIS Agent entity</span><span class="tI">
 </span><span class="tT">PREMIS:RIGHTS: PREMIS Rights entity</span><span class="tI">
 </span><span class="tT">PREMIS:EVENT: PREMIS Event entity</span><span class="tI">
@@ -997,7 +997,7 @@ var modelBoxes= new Array('model_mdSecType_mdWrap',
 </span><span class="tT">FGDC: Federal Geographic Data Committee metadata</span><span class="tI">
 </span><span class="tT">LOM: Learning Object Model</span><span class="tI">
 </span><span class="tT">PREMIS:  PREservation Metadata: Implementation Strategies</span><span class="tI">
-</span><span class="tT">PREMIS:OBJECT: PREMIS Object entiry</span><span class="tI">
+</span><span class="tT">PREMIS:OBJECT: PREMIS Object entity</span><span class="tI">
 </span><span class="tT">PREMIS:AGENT: PREMIS Agent entity</span><span class="tI">
 </span><span class="tT">PREMIS:RIGHTS: PREMIS Rights entity</span><span class="tI">
 </span><span class="tT">PREMIS:EVENT: PREMIS Event entity</span><span class="tI">
