--- a/METS_v1_Docs/mets_xsd_Complex_Type_seqType.html
+++ b/METS_v1_Docs/mets_xsd_Complex_Type_seqType.html
@@ -148,8 +148,8 @@ var modelBoxes= new Array('model_seqType_par',
         
         /**
          * Update the message presented in the title of the html page.
-         * - If the documentation was splited by namespace we present something like: "Documentation for namespace 'ns'"
-         * - If the documentation was splited by location we present somehing like: "Documentation for 'Schema.xsd'"
+         * - If the documentation was split by namespace we present something like: "Documentation for namespace 'ns'"
+         * - If the documentation was split by location we present something like: "Documentation for 'Schema.xsd'"
          * - If no split we always present: "Documentation for 'MainSchema.xsd'"
          */
         function updatePageTitle(message) {
