--- a/METS_v1_Docs/mets_xsd_Main_schema_mets_xsd.html
+++ b/METS_v1_Docs/mets_xsd_Main_schema_mets_xsd.html
@@ -130,8 +130,8 @@ var annotationBoxes= new Array('annotations_mets.xsd');
         
         /**
          * Update the message presented in the title of the html page.
-         * - If the documentation was splited by namespace we present something like: "Documentation for namespace 'ns'"
-         * - If the documentation was splited by location we present somehing like: "Documentation for 'Schema.xsd'"
+         * - If the documentation was split by namespace we present something like: "Documentation for namespace 'ns'"
+         * - If the documentation was split by location we present something like: "Documentation for 'Schema.xsd'"
          * - If no split we always present: "Documentation for 'MainSchema.xsd'"
          */
         function updatePageTitle(message) {
@@ -536,7 +536,7 @@ var annotationBoxes= new Array('annotations_mets.xsd');
 </span><span class="tT">      3. Add an MDTYPEVERSION attribute as a companion to the MDTYPE attribute in the mdRef and mdWrap elements.	</span><span class="tI">
 </span><span class="tT">      4. ID and STRUCTID attributes on the behavior element made optional.  Depending on whether the behavior applies to a transformFile element or div elements in the structMap, only one or the other of the attributes would pertain.</span><span class="tI">
 </span><span class="tT">      5. Documentation aligned with the METS Primer, and corrected.</span><span class="tI">
-</span><span class="tT">      6. xml:lang="en" atttribute value added to every &lt;documentation&gt; element</span><span class="tI">
+</span><span class="tT">      6. xml:lang="en" attribute value added to every &lt;documentation&gt; element</span><span class="tI">
 </span><span class="tT">      7. xlink:extendedLink support added to the &lt;structLink&gt; element by means of a new &lt;smLinkGrp&gt; element, and its child &lt;smLocatorLink&gt; and &lt;smArcLink&gt; elements.</span></pre></td>
                                     </tr>
                                  </table>
