--- a/METS_v2_Docs/mets2_xsd.html
+++ b/METS_v2_Docs/mets2_xsd.html
@@ -835,8 +835,8 @@ var modelBoxes= new Array('model_mets',
         
         /**
          * Update the message presented in the title of the html page.
-         * - If the documentation was splited by namespace we present something like: "Documentation for namespace 'ns'"
-         * - If the documentation was splited by location we present somehing like: "Documentation for 'Schema.xsd'"
+         * - If the documentation was split by namespace we present something like: "Documentation for namespace 'ns'"
+         * - If the documentation was split by location we present something like: "Documentation for 'Schema.xsd'"
          * - If no split we always present: "Documentation for 'MainSchema.xsd'"
          */
         function updatePageTitle(message) {
@@ -10546,7 +10546,7 @@ var modelBoxes= new Array('model_mets',
                                     <tr>
                                        <td style="width:100%">
                                           <pre><span class="tT">mdSecType: Complex Type for Metadata Sections</span><span class="tI">
-</span><span class="tT">The metadata section consists of elements that can contain any kind of metdata, included but not limited to technical metadata technical metadata for text/image/audio/video files, intellectual property rights metadata, analog/digital source metadata, and digital provenance metadata, that is, the history of migrations/translations performed on a digital library object from it's original digital capture/encoding.</span></pre>
+</span><span class="tT">The metadata section consists of elements that can contain any kind of metadata, included but not limited to technical metadata technical metadata for text/image/audio/video files, intellectual property rights metadata, analog/digital source metadata, and digital provenance metadata, that is, the history of migrations/translations performed on a digital library object from it's original digital capture/encoding.</span></pre>
                                        </td>
                                     </tr>
                                  </table>
@@ -10643,7 +10643,7 @@ var modelBoxes= new Array('model_mets',
                                     <td style="width:100%">
                                        <pre><span class="tEl">&lt;xsd:complexType</span><span class="tAN"> name=</span><span class="tAV">"mdSecType"</span><span class="tEl">&gt;</span><span class="tI">
   </span><span class="tEl">&lt;xsd:annotation</span><span class="tEl">&gt;</span><span class="tI">
-    </span><span class="tEl">&lt;xsd:documentation</span><span class="tAN"> xml:lang=</span><span class="tAV">"en"</span><span class="tEl">&gt;</span><span class="tT" style="white-space:normal">mdSecType: Complex Type for Metadata Sections The metadata section consists of elements that can contain any kind of metdata, included but not limited to technical metadata technical metadata for text/image/audio/video files, intellectual property rights metadata, analog/digital source metadata, and digital provenance metadata, that is, the history of migrations/translations performed on a digital library object from it's original digital capture/encoding.</span><span class="tEl">&lt;/xsd:documentation&gt;</span><span class="tI">
+    </span><span class="tEl">&lt;xsd:documentation</span><span class="tAN"> xml:lang=</span><span class="tAV">"en"</span><span class="tEl">&gt;</span><span class="tT" style="white-space:normal">mdSecType: Complex Type for Metadata Sections The metadata section consists of elements that can contain any kind of metadata, included but not limited to technical metadata technical metadata for text/image/audio/video files, intellectual property rights metadata, analog/digital source metadata, and digital provenance metadata, that is, the history of migrations/translations performed on a digital library object from it's original digital capture/encoding.</span><span class="tEl">&lt;/xsd:documentation&gt;</span><span class="tI">
   </span><span class="tEl">&lt;/xsd:annotation&gt;</span><span class="tI">
   </span><span class="tEl">&lt;xsd:choice</span><span class="tEl">&gt;</span><span class="tI">
     </span><span class="tEl">&lt;xsd:element</span><span class="tAN"> name=</span><span class="tAV">"mdGrp"</span><span class="tAN"> maxOccurs=</span><span class="tAV">"unbounded"</span><span class="tEl">&gt;</span><span class="tI">
