--- a/METS_v1_Docs/mets_xsd_Attribute_Group_FILECORE.html
+++ b/METS_v1_Docs/mets_xsd_Attribute_Group_FILECORE.html
@@ -153,8 +153,8 @@ var attributesBoxes= new Array('attributes_FILECORE');
         
         /**
          * Update the message presented in the title of the html page.
-         * - If the documentation was splited by namespace we present something like: "Documentation for namespace 'ns'"
-         * - If the documentation was splited by location we present somehing like: "Documentation for 'Schema.xsd'"
+         * - If the documentation was split by namespace we present something like: "Documentation for namespace 'ns'"
+         * - If the documentation was split by location we present something like: "Documentation for 'Schema.xsd'"
          * - If no split we always present: "Documentation for 'MainSchema.xsd'"
          */
         function updatePageTitle(message) {
